<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutNoRemind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/img_no_reminder" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_don_t_set_any_reminder_yet"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_to_create_a_reminder_for_your_plants"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReminder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dsdsds"/>

    <RelativeLayout
        android:id="@+id/dsdsds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSet_A_Reminder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/bg_btn_dialog_uploadphoto"
            android:text="@string/set_a_reminder"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="35dp"
            android:background="@drawable/alram"
            android:backgroundTint="@color/white"
            android:elevation="10dp" />

    </RelativeLayout>
</RelativeLayout>
