<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlTopbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_22sdp"
        android:paddingVertical="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/permission"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="320dp"
                android:layout_height="280dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/img_permission" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivImage"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/title_permission"
                android:textColor="@color/black"
                android:textSize="@dimen/_19sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llContentPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_16sdp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchWidget"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-20dp"
                    android:checked="true"
                    android:textAlignment="textStart"
                    android:thumb="@drawable/custom_switch_layer"
                    app:track="@drawable/custom_switch_track" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grant_permission"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_permission"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/actionLetStart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/llContentPermission"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:visibility="gone"
                app:cardBackgroundColor="@color/color2"
                app:cardCornerRadius="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/letstart"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>
