<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dsdsds"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/lightbg"
            android:layout_marginTop="20dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgUpLoad"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:rotation="90"
                android:scaleType="fitXY"
                android:src="@drawable/img_upload_remind"
                app:riv_corner_radius="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtPlant_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/item_selector_remind"
                android:hint="@string/plant_name"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtAlarm_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/item_selector_remind"
                android:hint="@string/alarm_name"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_selector_remind"
                android:hint="10:00"
                android:inputType="none"
                android:padding="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/set_reminder"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <GridView
                android:id="@+id/idGVDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="6dp"
                android:numColumns="3"
                android:verticalSpacing="6dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/dsdsds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd_Reminder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn_dialog_uploadphoto"
            android:text="@string/update_reminder"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="35dp"
            android:background="@drawable/alram"
            android:backgroundTint="@color/white"
            android:elevation="10dp" />

    </RelativeLayout>
</RelativeLayout>
