<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:src="@drawable/plantimg"
            app:riv_corner_radius="16dp" />

        <RelativeLayout
            android:id="@+id/RLayout1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/roundedImageView"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_textview_plant"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/lLayout2"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/txtType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtPlant_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:maxLines="2"
                    android:text="Zantedeschia aethiopica"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_textview_plant2"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="% 18.52"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLayout1"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_textview_plant"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:text="@string/other_results"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="50dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLayout2"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <Button
                android:id="@+id/btn_Home"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_btn_dialog_uploadphoto"
                android:ellipsize="none"
                android:maxLines="1"
                android:text="@string/home" />

            <Button
                android:id="@+id/btn_more"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_dialog_uploadphoto"
                android:ellipsize="none"
                android:maxLines="1"
                android:text="@string/more_info"
                android:visibility="invisible" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
